# Vending-Machine

./: CMakeLists.txt  Makefile  README.md  utility.c  utility.h  vm  vm.c  vm.h  vm_coin.c  vm_coin.h  vm_menu.c  vm_menu.h  vm_options.c  vm_options.h  vm_stock.c  vm_stock.h  vm_system.h
